<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="13dp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instr"
            android:layout_alignStart="@+id/instr"
            android:layout_below="@+id/instr"
            android:gravity="start"
            android:paddingLeft="9dp"
            android:paddingRight="14dp"
            android:paddingTop="3dp"
            android:text="@string/notice"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/instr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:drawableLeft="@drawable/info"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="Notice:"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/oppo_inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/vivo"
            android:layout_alignStart="@+id/vivo"
            android:layout_below="@+id/vivo"
            android:paddingLeft="20dp"
            android:text="@string/vivo"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/oppo_inst"
            android:layout_alignStart="@+id/oppo_inst"
            android:layout_below="@+id/textView18"
            android:paddingLeft="20dp"
            android:text="@string/lenovo"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView20"
            android:layout_alignStart="@+id/textView20"
            android:layout_below="@+id/textView20"
            android:paddingLeft="20dp"
            android:text="@string/asus"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/vivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="11dp"
            android:paddingLeft="9dp"
            android:text="\u2022For Vivo"
             
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19"
            android:layout_below="@+id/oppo_inst"
            android:paddingLeft="9dp"
            android:paddingTop="6dp"
            android:text="\u2022For Lenovo"
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19"
            android:layout_below="@+id/textView19"
            android:paddingLeft="9dp"
            android:paddingTop="6dp"
            android:text="\u2022For Asus"
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21"
            android:layout_below="@+id/textView21"
            android:paddingLeft="9dp"
            android:paddingTop="6dp"
            android:text="\u2022For Oppo"
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22"
            android:layout_below="@+id/textView22"
            android:paddingLeft="20dp"
            android:text="@string/oppo"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView23"
            android:layout_alignStart="@+id/textView23"
            android:layout_below="@+id/textView23"
            android:text="Plsease let us know it doesnot work in your mobile. "
            android:textColor="#328332"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView25"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="Ok"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    </RelativeLayout>
</ScrollView>